<resources>
    <string name="app_name">ScienceHub</string>
    <string name="api_key">AIzaSyABRYERYvdUd5KWBABs4yYVvKEXHc7rNmY</string>
    <string name="browser_api_key">AIzaSyDnmCxnDxO7qBfsaGYPnt8U7JEC5GbWkkI</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="back_to_login">Already a Member?</string>
    <string name="search">Search</string>
    <string name="work_psition">Position</string>
    <string name="btn_add_code">Add Code</string>
    <string name="btn_add_home">Add Home</string>
    <string name="btn_add_work">Add Work</string>
    <string name="btn_apply_promo_code">Apply Promo Code</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_contact">Contact</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_done">Done</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_get_fare_estimate">Get Fare Estimate</string>
    <string name="btn_invite_friends">Invite Friends</string>
    <string name="btn_login">Login</string>
    <string name="btn_ok">OK</string>
    <string name="btn_open_settings">Open Settings</string>
    <string name="btn_receipt">Receipt</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_register">Register</string>
    <string name="btn_request_la">Request WeDel</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="btn_set_pickup_location">Set Pick Up Location</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_request_wedel">Request Wedel</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="status_inprogress">2</string>
    <string name="status_cancelled">0</string>
    <string name="status_completed">3</string>
    <string name="feedback_bad_car_quality">Car Quality</string>
    <string name="feedback_bad_cleanliness">Cleanliness</string>
    <string name="feedback_bad_comfort">Comfort</string>
    <string name="feedback_bad_driving">Driving</string>
    <string name="feedback_bad_other">Other</string>
    <string name="feedback_bad_service">Service</string>
    <string name="feedback_good_car_quality">Car Quality</string>
    <string name="feedback_good_cleanliness">Cleanliness</string>
    <string name="feedback_good_comfort">Comfort</string>
    <string name="feedback_good_driving">Driving</string>
    <string name="feedback_good_other">Other</string>
    <string name="feedback_good_service">Service</string>
    <string name="feedback_my_driver_was_unprofessional">My driver was Unprofessional</string>
    <string name="feedback_my_vehicle_wasn_t_what_i_expected">My vehicle wasn\'t what i expected</string>
    <string name="hint_0">0</string>
    <string name="hint_destination_required">Destination Required</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_phone">Email or Mobile</string>
    <string name="hint_enter_the_destination">Enter the Destination</string>
    <string name="hint_enter_the_promo_code">Enter the Promo Code</string>
    <string name="hint_enter_the_source">Enter the Source</string>
    <string name="hint_enter_your_email_address">Enter Your Email Address</string>
    <string name="hint_enter_your_name_here">Enter your name here</string>
    <string name="hint_enter_your_number">Enter Your Phone Number</string>
    <string name="hint_enter_your_password">Enter your password</string>
    <string name="hint_password">Password</string>
    <string name="hint_search_or_type_a_location_here">Search or Type a Location here</string>
    <string name="hint_type_here">Type here</string>
    <string name="hint_username">Username</string>
    <string name="label_this_version">Version 1.0.0</string>
    <string name="label_address">address</string>
    <string name="label_at">at</string>
    <string name="label_base_fare">Base Fare</string>
    <string name="label_base_rate">Base rate</string>
    <string name="label_camera">Camera</string>
    <string name="label_cancelled">Cancelled</string>
    <string name="label_car_name">Car Name</string>
    <string name="label_car_number">Car Number</string>
    <string name="label_car_quality">Car Quality</string>
    <string name="label_cash">Cash</string>
    <string name="label_choose_an_action">Choose an action</string>
    <string name="label_cleanliness">Cleanliness</string>
    <string name="label_comfort">Comfort</string>
    <string name="label_confirmation">Confirmation</string>
    <string name="label_create_your_account_password">Create your account Password</string>
    <string name="label_destination">Destination</string>
    <string name="label_details">Details</string>
    <string name="label_distance_fare">Distance Fare</string>
    <string name="label_driver_name">Driver Name</string>
    <string name="label_driving">Driving</string>
    <string name="label_email">Email</string>
    <string name="label_enter_the_4_digit_code_sent_to_you">Enter the 4-digit code sent to you</string>
    <string name="label_enter_the_verification_code">Enter the verification code sent to you</string>
    <string name="label_estd_fare">Estd Fare</string>
    <string name="label_eta">ETA</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_give_friends_free_ride_credit_to_try_ugra_you_ll_get_50_off_each_off_your_next_2_rides_when_they_start_riding">Give friends free WeDel credit to try WeDel. You\'ll get र50 off each off your next 2 WeDels when they start riding.</string>
    <string name="label_i_had_an_issue_with_reciept_or_payment">I had an issue with receipt or payment</string>
    <string name="label_i_lost_an_item">I Lost an item</string>
    <string name="label_i_was_incorrectly_charged_cancellation_fee">I was incorrectly charged cancellation fee</string>
    <string name="label_i_would_like_a_refund">I would like a refund</string>
    <string name="label_just_a_ride">Just A WeDel</string>
    <string name="label_kilometers">Kilometers</string>
    <string name="label_max_size">Max Size</string>
    <string name="label_min_fare">Min Fare</string>
    <string name="label_minute_rate">Minute rate</string>
    <string name="label_minutes">Minutes</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_more_than">More Than</string>
    <string name="label_name">Name</string>
    <string name="label_no_cars_available">No WeDels Available</string>
    <string name="label_not_available">N/A</string>
    <string name="label_other">Other</string>
    <string name="label_places">Places</string>
    <string name="label_please_take_a_few_minutes_to_give_us_feedbcack_on_your_recent_ride_with_the_ugra_driver">Please take a few minutes to give us feedback on your recent WeDel with the WeDel driver</string>
    <string name="label_please_take_a_few_moments_to_give_us_feedback_on_your_recent_ride_with_the_ugra_driver">Please take a few moments to give us feedback on your recent WeDel with the WeDel Driver</string>
    <string name="label_please_take_a_few_moments_to_give_us_feedback_on_your_recent_ride_with_the_ugra_driver_bad_feedback">Please take a few moments to give us feedback on your recent WeDel with the WeDel Driver</string>
    <string name="label_profile">Profile</string>
    <string name="label_promotion">Promotion</string>
    <string name="label_rate_nyour_trip">RATE YOUR WeDel</string>
    <string name="label_requesting">Requesting…</string>
    <string name="label_resend_code_in">Re send code in</string>
    <string name="label_say_thanks">Say Thanks!</string>
    <string name="label_select">Select :</string>
    <string name="label_service">Service</string>
    <string name="label_settings">Settings</string>
    <string name="label_share_your_invite_code">Share your invite code</string>
    <string name="label_source">Source</string>
    <string name="label_sub_total">Sub Total</string>
    <string name="label_time_fare">Time Fare</string>
    <string name="label_to">To</string>
    <string name="label_total_fare">Total Fare</string>
    <string name="label_total_rate">Total rate</string>
    <string name="label_trip_cancelled">WeDel Cancelled</string>
    <string name="label_trips">WeDels</string>
    <string name="label_active_trips">Active WeDels</string>
    <string name="label_cancelled_trips">Cancelled WeDels</string>
    <string name="label_completed_trips">Completed WeDels</string>
    <string name="label_inroute">In Route</string>
    <string name="label_booking">Requesting</string>
    <string name="label_completed">Completed</string>
    <string name="label_archived_trips">Archived WeDels</string>
    <string name="label_what_s_your_email_address">What\'s your email Address?</string>
    <string name="label_what_went_well">What went well?</string>
    <string name="label_what_went_wrong">What went wrong?</string>
    <string name="label_whats_s_your_name">Whats\'s your name?</string>
    <string name="label_with_you_when_you_want_to_keep_n_moving_forward">With you When You Want To Keep\nMoving Forward</string>
    <string name="label_you_rated">You Rated</string>
    <string name="label_your_fare_may_change_if_you_update_your_destination_or_make_multiple_stops">Your fare may change if you Update your destination or make multiple stops</string>
    <string name="label_your_last_trip">Your Last WeDel</string>
    <string name="label_your_ugra_fare_is">Your WeDel Fare is</string>
    <string name="label_your_active_trips">Your Active Wedels</string>
    <string name="label_your_cancelled_trips">Your Cancelled Wedels</string>
    <string name="label_your_completed_trips">Your Completed Wedels</string>
    <string name="label_your_archived_trips">Your Archived Wedels</string>
    <string name="label_request">Request</string>
    <string name="label_request_new">Request New WeDel?</string>
    <string name="label_welcome_back">Welcome Back, </string>
    <string name="permission_read_external_storage">Permission required to read external storage</string>
    <string name="permission_camera">Permission required to access Camera</string>
    <string name="permission_write_external_storage">Permission required to write external storage</string>
    <string name="permission_access_location">Permission required to access your location</string>
    <string name="res_groups">Research Groups</string>
    <string name="tech_pages">Technological Pages</string>
    <string name="pub_area">Publications Area</string>
    <string name="my_pub">My Publications</string>
    <string name="proposals">Proposals and Opportunities</string>
    <string name="my_opportunities">My Opportunities</string>
    <string name="forums">Forums</string>
    <string name="events">Events</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="my_pics">Pictures</string>
    <string name="explore">Explore</string>
    <string name="find_friends">Find Members</string>
    <string name="movies">Movies</string>
    <string name="home">Home</string>
    <string name="downloading_file">Downloading File</string>
    <string name="message_destination_required">Destination Is Required</string>
    <string name="message_email_is_required">Email is Required</string>
    <string name="message_enter_a_valid_email_address">Enter a Valid email</string>
    <string name="message_enter_a_valid_promocode">Enter a Valid Promocode</string>
    <string name="tell_us_your_email_we_will_find_your_password">Tell us your Email, we will find your password</string>
    <string name="cancel_request">Cancel request</string>
    <string name="place_request">Place request</string>
    <string name="btn_add_wedel">Add wedel</string>
</resources>