<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NestedScrollBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eg.mimocodes.sciencehub.activity.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="50dip">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:layout_marginTop="50dp"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/sciencehub_logo" />

        <eg.mimocodes.sciencehub.widgets.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/tell_us_your_email_we_will_find_your_password"
            android:textColor="@color/white"
            android:textAppearance="?android:textAppearanceSmall"/>

        <EditText
            android:id="@+id/etxt_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="16dp"
            android:background="@drawable/background_login"
            android:drawablePadding="12dp"
            android:padding="8dp"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            android:hint="@string/hint_email"
            android:textColorHint="#fff"
            android:textColor="@color/white"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:layout_marginTop="24dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_round_edges"
            android:onClick="onSubmitButtonClick"
            android:text="@string/btn_submit"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16dp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>