<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="250dp"
    android:orientation="vertical">

    <eg.mimocodes.sciencehub.widgets.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/label_choose_an_action"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="100dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:onClick="onCameraClick"
                android:src="@mipmap/ic_camera"/>

            <eg.mimocodes.sciencehub.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="bottom"
                android:text="@string/label_camera"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="#FF000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="100dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:onClick="onGalleryClick"
                android:src="@mipmap/ic_gallery"/>

            <eg.mimocodes.sciencehub.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="bottom"
                android:text="@string/label_gallery"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>