<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_on_trip_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:onClick="onOnTripDriverDetailsClick"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_on_trip_driver_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/avatar_circle"
            android:padding="3dp"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:minHeight="100dp"
            android:orientation="vertical">


            <eg.mimocodes.sciencehub.widgets.CustomTextView
                android:id="@+id/txt_on_trip_driver_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_driver_name"/>

            <RatingBar
                android:id="@+id/rating_on_trip_driver_rating"
                style="?attr/ratingBarStyleSmall"
                android:theme="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/colorPrimary"
                android:stepSize="1"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/iv_on_trip_car_"
            android:background="@color/gray_transparent_70"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/iv_on_trip_car_photo"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:background="@color/white"
                android:padding="10dp"/>

            <ImageView
                android:id="@+id/iv_on_trip_car_"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"/>

            <eg.mimocodes.sciencehub.widgets.CustomTextView
                android:id="@+id/txt_on_trip_car_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_car_number"/>

        </FrameLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dashed_line_landing_page"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_driver_cancel"
            android:onClick="onCancelButtonClick"
            android:text="@string/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btn_driver_contact"
            android:onClick="onContactButtonClick"
            android:text="@string/btn_contact"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_add_wedel"
            android:onClick="onAddWedelButtonClick"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:text="@string/btn_add_wedel"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimary" />




    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_payment"
        android:tint="@color/colorPrimary"/>
</LinearLayout>